Stop popup being clipped

--- a/extension/assets/css/popup.css
+++ b/extension/assets/css/popup.css
@@ -78,9 +78,6 @@ a.center {
   height: 12px;
   line-height: 12px;
 }
-.container {
-  height: 30px;
-}
 .blocked {
   color: red;
 }
